--- a/app/views/positions/agreement.html.erb
+++ b/app/views/positions/agreement.html.erb
@@ -1,37 +1,96 @@
 <h4>Contributor Agreement</h4>
 
-
-You’re Almost Done!
-
-Get connected! You are now part of a vibrant, nationwide network of talented college students, and that’s seriously something to brag about. Add your Spoon title to your Facebook job description, add it to your twitter handle, and most importantly, share your articles with family and friends. How cool would it be to see your post go viral?
-Congrats, you know everything you need to know for Spoon. If you have any questions, do not hesitate at all to email Sarah (sarah@spoonuniversity.com) or Mackenzie (mackenzie@spoonuniversity.com) about anything.
+<div class="agreement-container">
+	<div class="contrib-agreement"> 
+<p>This Contributor Agreement (the “Agreement”) is made as of the date set forth below by 
+and between Spoon University, LLC, a Delaware limited liability company with an address of 
+202 E. 13th St. New York, NY 10003 ("Company"), and the undersign individual 
+("Contributor").</p>
  
-Here’s the last step!
-
-Sign up for our in-house, staff-only updates and super secret tips (like discounts and perks, yo).
+ <p>For good and valuable consideration, the receipt and sufficiency of which are hereby 
+acknowledged, IT IS AGREED: </p>
  
-Read the Contributor Agreement. By signing your name and providing the date below, you are effectively agreeing to the Contributor Agreement. Don’t forget to give us feedback on Secret Sauce!
+ <h4>1. Definitions. The following terms shall have the following meanings: </h4>
  
-
-Name
-
-First
+<p> (a) Confidential Information includes any information and any trade or 
+business materials that the Company treats, or is obligated to treat, as confidential or proprietary. </p>
  
-Last
-
-Date
-
-Month
+<p> (b) Intellectual Property means any content either published or considered for 
+publication by the Company, trade names, trademarks, including but not limited to the SPOON 
+UNIVERSITY and SPOON UNIVERSITY & Design trademarks, service marks, the 
+spoonuniversity.com and any other websites owned and operated by the Company, or any other 
+content whether or not registered or otherwise protected or protectable under state, federal, or 
+foreign patent, trademark, copyright, or similar laws. </p>
  
-Day
+ <p>(c) Work Product means all tangible and intangible contributions rendered to 
+the Company by Contributor. </p>
  
-Year
+ <h4>2. Contributor Acknowledgments. </h4>
+ 
+<p>(a) The Company has developed and will develop its Confidential 
+Information and Intellectual Property over a substantial period of time and at a substantial 
+expense, and its Confidential Information and Intellectual Property are integral to the success of 
+the Company. During the course of creating or providing contributions to the Company, 
+Contributor may develop or become aware of Confidential Information and/or Intellectual 
+Property. Protection of Confidential Information and Intellectual Property is necessary to the 
+conduct of the Company's business, and the Company is and shall at all times remain the sole 
+owner of the Company's Confidential Information and Intellectual Property. </p>
+ 
+<p>(b) When the Company requests a contribution of writing, photography or 
+services from Contributor, such contribution will be subject to all of the terms of this Agreement. </p>
+ 
+<p>(c) By contributing Work Product to the Company, Contributor represents and warrants that Contributor is the sole author of the Work Product and that the Work Product is 
+original and does not infringe upon the rights of any third party. Contributor agrees to 
+indemnify, defend and hold harmless the Company, its officers, affiliates, successors, members 
+and assigns, for any and all costs that arise out of any claim against the Company regarding any 
+third party rights that the Company is alleged to have violated based on the Company’s use of 
+the Work Product or a breach of Contributor’s representation and warranty under this provision.  
+ 
+ <h4>3. Confidentiality and Publication. </h4>
+ 
+<p>(a) Contributor shall at all times, both during and after the time Contributor 
+contributes to the Company, maintain in confidence and not utilize the Confidential Information 
+or the Intellectual Property of the Company, and/or Confidential Information of others except for 
+the benefit of the Company. Neither this restriction nor the restriction in Section 4 below shall 
+prevent the Contributor from reproducing or republishing for noncommercial purposes Work 
+Product originally published by the Company provided that the copyright notice “© Spoon 
+University” is printed prominently on such writings. </p>
 
-What did you like about the Secret Sauce guide? What didn’t you like? Help us improve!
-
-
-
-<% end %>
+<p> (b) During the time Contributor is contributing to the Company, Contributor will not 
+publish anything substantially similar to the Work Product and/or the Company’s product and 
+service offerings without the Company’s prior written consent, which shall not be unreasonably 
+withheld, including, without limitation, publication on social media websites, discussion boards, 
+or other websites generally accessible on the Internet. </p>
+ 
+<p>4. Rights to Intellectual Property. All Work Product which is a copyrightable work 
+of authorship will be deemed a work made for hire owned by the Company under United States 
+copyright laws. To the extent that any Work Product is not deemed a work made for hire, 
+Contributor hereby assigns irrevocably and unconditionally, to the fullest extent permitted by 
+law under any interpretation of the relationship between the parties, all right, title and interest 
+(including without limitation all Intellectual Property rights) embodied in or associated with the 
+Work Product and which are authored, conceived, created or reduced to practice by Contributor 
+for the Company Contributor agrees that, as the owner of the Work Product, the Company may 
+use all such Work Product without restriction by or monetary compensation for Contributor. 
+Any use of Work Product by Contributor other than as stated in Section 3(a) above requires the 
+Company’s prior express written permission. </p>
+ 
+<p>5. No Offer of Employment. Nothing herein shall be construed as constituting an 
+employment agreement or an undertaking by the Company to retain Contributor's services for 
+any stated period of time, other than as set forth herein. </p>
+ 
+<h4>6. General Provisions. </h4>
+ 
+<p>(a) This Agreement: (i) shall be governed by and construed under the law of 
+the State of Delaware, without application of principles of conflicts of laws; (ii) shall constitute 
+the entire agreement of the parties with respect to the subject matter hereof, superseding all prior 
+oral and written communications, proposals, negotiations, representations, understandings, 
+courses of dealing, agreements, contracts, and the like between the parties in such respect; and 
+(iii) may be amended, modified, or terminated, and any right under this Agreement may be 
+waived in whole or in part, only by a writing signed by both parties. </p>
+ 
+ 
+</div>
+</div>
 
 
 
@@ -54,7 +113,8 @@ What did you like about the Secret Sauce guide? What didn’t you like? Help us 
 
 <!-- Agreement goes here -->
 
-<form action="<% agree_path %>" method="post">
+<form action="<%= agree_path %>" method="post">
+	<button class="btn btn-primary">I Agree</button>
 	
 </form>
 
