--- a/app/views/positions/editorial/_add_photos.html.erb
+++ b/app/views/positions/editorial/_add_photos.html.erb
@@ -34,6 +34,7 @@
     </ol>
   </div>
 </div>
+<div class="row">
 
 <div class="col-sm-6">
   <iframe src="//player.vimeo.com/video/85962617" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -42,6 +43,9 @@
 <div class="col-sm-6">
   <img src="/assets/editorial/50.png">
   <p>WARNING: Sometimes, the default image size will be medium instead of large! Be sure to scroll down on the right and see that ‘LARGE’ is selected in the dropdown menu.</p>
+</div>
+
+
 </div>
 
 
