--- a/app/views/positions/editorial/_tone.html.erb
+++ b/app/views/positions/editorial/_tone.html.erb
@@ -13,7 +13,7 @@
     <strong>Everything you never wanted to know about prison food.</strong> It turns out prison food is just as gross as you expected, but there’s plenty more interesting backstory about jail cuisine that...
   </li>
 </ul>
-<ul>
+<ul class="list-unstyled">
   <li>
     Be <strong>raw</strong> but not <strong>cheesy</strong>
   </li>
