--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -3,34 +3,43 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
+  <div class="form-group">
+    <label for="email">Email</label>
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :first_name %><br />
+  <div class="form-group">
+    <label for="first_name">First Name</label>
   <%= f.text_field :first_name, :autofocus => true %></div>
 
-  <div><%= f.label :last_name %><br />
+  <div class="form-group">
+    <label for="last_name">Last Name</label>
   <%= f.text_field :last_name, :autofocus => true %></div>
 
-  <div><%= f.label :phone_number %><br />
+  <div class="form-group">
+    <label for="phone_number">Phone Number</label>
   <%= f.text_field :phone_number, :autofocus => true %></div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+  <div class="form-group">
+    <label for="password">Password</label>
   <%= f.password_field :password, :autocomplete => "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div class="form-group">
+    <label for="password_confirmation">Confirm Password</label>
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+  <div class="form-group">
+    <label for="current_password">Current Password</label> <i>(we need your current password to confirm your changes)</i>
   <%= f.password_field :current_password %></div>
 
   <% if @schools %>
-  <div><%= f.collection_select(:school_id, @schools, :id, :name) %></div>
-  <div><%= select_tag(:position_id, options_from_collection_for_select(@positions, "id", "name") ) %></div>
+  <div class="form-group">
+    <label for="school_id">School</label><%= f.collection_select(:school_id, @schools, :id, :name) %></div>
+  <div class="form-group">
+    <label for="position_id">Position</label><%= select_tag(:position_id, options_from_collection_for_select(@positions, "id", "name") ) %></div>
 <% end %>
 
 
