--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,37 @@
-<h2>Sign up !!!!!</h2>
+<h2>Sign up</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <div class="form-group">
+    <label for="email">Email</label>
+  <%= f.email_field :email, :autofocus => true %>
+  </div>
 
-  <div><%= f.label :first_name %><br />
+
+  <div class="form-group">
+    <label for="first_name">First Name</label>
   <%= f.text_field :first_name, :autofocus => true %></div>
 
-  <div><%= f.label :last_name %><br />
-  <%= f.text_field :last_name, :autofocus => true %></div>
+  <div class="form-group">
+        <label for="last_name">Last Name</label>
+  <%= f.text_field :last_name, :autofocus => true  %></div>
 
-  <div><%= f.label :phone_number %><br />
+  <div class="form-group">
+        <label for="phone_number">Phone Number</label>
   <%= f.text_field :phone_number, :autofocus => true %></div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <div class="form-group">
+        <label for="password">Password</label>
+  <%= f.password_field :password  %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div class="form-group">
+        <label for="password">Password Confirmation</label>
+  <%= f.password_field :password_confirmation  %></div>
 
 <% if @schools %>
-  <div><%= f.collection_select(:school_id, @schools, :id, :name) %></div>
-  <div><%= select_tag(:position_id, options_from_collection_for_select(@positions, "id", "name") ) %></div>
+  <div class="form-group"><%= f.collection_select(:school_id, @schools, :id, :name) %></div>
+  <div class="form-group"><%= select_tag(:position_id, options_from_collection_for_select(@positions, "id", "name") ) %></div>
 <% end %>
 
 
