added sliding side menu

--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,3 +1,2 @@
-<h1>Welcome to Spoon University</h1>
-<p>(video here)</p>
+<h1 class="super">Welcome to Spoon University</h1>
 <a class="btn btn-primary" href="/">Continue to Home</a>
