--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,7 @@
+html body {
+	height: 100%;
+}
+
 textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus, .uneditable-input:focus, button:focus {   
 	border-color: transparent;
 	box-shadow: transparent;
@@ -47,6 +51,10 @@ h1, h2, h3, h4, h5 {
 	border-radius: 1px;
 	text-decoration: none;
 	font-weight: 700;
+}
+
+.super {
+	font-size: 60px;
 }
 
 .track-nav li {
@@ -149,11 +157,27 @@ h1, h2, h3, h4, h5 {
 }
 
 footer {
-	margin-top:100px;
+	margin-top:200px;
 	padding: 5px;
 	text-align:center;
-	position: absolute;
 	bottom: 10px;
+}
+
+.btn.btn-primary.btn-lg {
+	font-size: 20px;
+	padding: 18px 26px;
+}
+
+
+#menu {
+		position:absolute;
+		top: 50px;
+		right: 0px;
+    height: 300px;
+    width: 0px;
+    display: none;
+    background: #000000;
+    color:white;
 }
 
 
