--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -6,6 +6,7 @@
       	<p style="background: <%= student.school.color_1 %>; color: <%= student.school.color_2 %>" class="badge"><%= student.school.shortname %></p></div>
       <div class="panel-body">
         <ul class="list-unstyled">
+            <li><%= student.position.name %></li>
             <li><%= student.phone_number %></li>
             <li><%= student.email %></li>
         </ul>
