--- a/app/views/positions/editorial/_style.html.erb
+++ b/app/views/positions/editorial/_style.html.erb
@@ -64,10 +64,10 @@
 </div>
 
 <div class="row">
-  <div id="quiz" class="span12">
+  <div id="quiz">
     
   </div>
-  <div id="question" class="span12">
+  <div id="question">
     
   </div>
 </div>
