--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2,10 +2,44 @@ html body {
 	height: 100%;
 }
 
+.addendum {
+	margin-top:100px;
+}
+
+a.link {
+	color:#000000;
+}
+
+a.link:hover {
+	color: #000000;
+	text-decoration: none;
+	border-bottom: 3px solid #a33873;
+}
+
+select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
+	font-size: 10px;
+	height: 35px;
+	padding:12px;
+	width: 60%;
+	margin: 0 auto;
+	text-align:center;
+	text-transform: uppercase;
+	font-family: 'museo-sans-rounded';
+
+}
+
 textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus, .uneditable-input:focus, button:focus {   
 	border-color: transparent;
 	box-shadow: transparent;
 	outline: 0 none;
+}
+
+.fa {
+	color:black;
+}
+
+.body {
+	text-align:center;
 }
 
 body {
@@ -19,6 +53,14 @@ h1, h2, h3, h4, h5 {
 
 .navbar {
 	padding:5px;
+	background: #474747;
+	border-bottom:0px;
+	box-shadow: 0px 0px 15px rgba(0,0,0,0.5);
+	min-height: 25px;
+}
+
+#menu .list-group-item:hover {
+	background-color:#3a3a3a;
 }
 
 .profile {
@@ -169,17 +211,42 @@ footer {
 }
 
 
-#menu {
-		position:absolute;
-		top: 50px;
-		right: 0px;
-    height: 300px;
-    width: 0px;
-    display: none;
-    background: #000000;
-    color:white;
+.list-unstyled {
+	margin:0px;
 }
 
+.list-group-item.border-top {
+	border-top: 1px solid #ffffff;
+	border-width: 0 1px;
+}
+
+div#menu {
+		z-index: 1020;
+		position:absolute;
+		top: 35px;
+		right: -300px;
+    text-align:left;
+    display:none;
+    font-size: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.5);
+    letter-spacing: 1px;
+    height: 100%;
+    background-color: #474747;
+}
+
+#menu .list-group-item {
+	background: #474747;
+	color: #ffffff;
+	border: 0px;
+	border-radius: 0px;
+}
+
+#openMenu {
+	margin: 0 5px;
+	color:#ffffff;
+}
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
