--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,33 +1,27 @@
-<h2>Sign up</h2>
+<h2>Give us your info, first.</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="form-group">
-    <label for="email">Email</label>
-  <%= f.email_field :email, :autofocus => true %>
+  <%= f.email_field :email, :autofocus => true, :placeholder => "Email"  %>
   </div>
 
 
   <div class="form-group">
-    <label for="first_name">First Name</label>
-  <%= f.text_field :first_name, :autofocus => true %></div>
+  <%= f.text_field :first_name, :autofocus => true, :placeholder => "First Name"  %></div>
 
   <div class="form-group">
-        <label for="last_name">Last Name</label>
-  <%= f.text_field :last_name, :autofocus => true  %></div>
+  <%= f.text_field :last_name, :autofocus => true, :placeholder => "Last Name"   %></div>
 
   <div class="form-group">
-        <label for="phone_number">Phone Number</label>
-  <%= f.text_field :phone_number, :autofocus => true %></div>
+  <%= f.text_field :phone_number, :autofocus => true, :placeholder => "Phone Number"  %></div>
 
   <div class="form-group">
-        <label for="password">Password</label>
-  <%= f.password_field :password  %></div>
+  <%= f.password_field :passwor, :placeholder => "Password"   %></div>
 
   <div class="form-group">
-        <label for="password">Password Confirmation</label>
-  <%= f.password_field :password_confirmation  %></div>
+  <%= f.password_field :password_confirmation, :placeholder => "Confirm Password"   %></div>
 
 <% if @schools %>
   <div class="form-group"><%= f.collection_select(:school_id, @schools, :id, :name) %></div>
@@ -36,7 +30,7 @@
 
 
 
-  <div><%= f.submit "Sign up" %></div>
+  <div><%= f.submit "Sign up", :class => "btn btn-primary btn" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
