--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -18,7 +18,7 @@
   <%= f.text_field :phone_number, :autofocus => true, :placeholder => "Phone Number"  %></div>
 
   <div class="form-group">
-  <%= f.password_field :passwor, :placeholder => "Password"   %></div>
+  <%= f.password_field :password, :placeholder => "Password"   %></div>
 
   <div class="form-group">
   <%= f.password_field :password_confirmation, :placeholder => "Confirm Password"   %></div>
