--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -19,7 +19,7 @@
   <% end %>
 
   <% if school.spoon_url %>
-    <li><a href="<%= school.spoon_url %>"><img style="width:15px;" src='/assets/logo-black.png'></a></li>
+    <li><a href="<%= school.spoon_url %>"><img style="width:14px;margin-top:-4px;" src='/assets/logo-black.png'></a></li>
   <% end %>
 </ul>
 <div class="row active-users">
