--- a/app/views/schools/admin.html.erb
+++ b/app/views/schools/admin.html.erb
@@ -21,15 +21,15 @@
         <% end %>
         <li>Active Users:
         <% if school.users_active != [] %>
-          <%= school.users_active.count %>
+          <%= school.users_active.count %></li>
         <% else %>
-          0
+          0</li>
         <% end %>
         <li>Total Users:
         <% if school.users != [] %>
-          <%= school.users.count %>
+          <%= school.users.count %></li>
         <% else %>
-          0
+          0</li>
         <% end %>
       </ul>
     </div>
