changed alum active

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -20,6 +20,24 @@ html body {
 	text-align: left;
 }
 
+.alum-active .panel {
+	border-color: #d5d5d5;
+	color: #dddddd;
+}
+
+.alum-active .panel-heading {
+	background-color: #fdfdfd;
+	border-color: #f5f5f5;
+}
+
+.alum-active p {
+	color: #dddddd;
+}
+
+.alum-active .make-alum {
+	display:none;
+}
+
 .circle {
 	border-radius: 50%;
 	width: 100px;
