--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -25,7 +25,7 @@
 <div class="row active-users">
   <% if school.users_active != [] %>
     <% school.users_active.each do |student| %>
-      <div class="col-md-3 active-user">
+      <div class="col-md-3 col-sm-4 active-user">
         <div class="panel panel-default">
           <div class="panel-heading">
             <p><%= student.name %>
