--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <% if user_signed_in? %>
+  <script> 
+    var user = <%= current_user.to_json(only: [:first_name, :id]).html_safe %>;
+  </script>
+  <% end %> 
   <script type="text/javascript" src="//use.typekit.net/pmb1dkw.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -12,11 +17,12 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
   <a href="/" id="logo"><%= image_tag "logo.png" %></a>
+  <% if user_signed_in? %>
+    <span>Hi <%= current_user.first_name %>, this is our secret sauce.</span>
+    <i id="openMenu" class="fa fa-bars fa-2x pull-right"></i>
+  <% else %>
   <span>This is our secret sauce.</span>
-
-<% if user_signed_in? %>
-  <i id="openMenu" class="fa fa-bars fa-2x pull-right"></i>
-<% end %>
+  <% end %>
 </div>
 </nav>
 <div class="container body">
