--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -25,7 +25,7 @@
 <div class="row active-users">
   <% if school.users_active != [] %>
     <% school.users_active.each do |student| %>
-      <div class="col-md-3 col-sm-4 active-user">
+      <div class="col-lg-3 col-sm-4 active-user">
         <div class="panel panel-default">
           <div class="panel-heading">
             <p><%= student.name %>
@@ -56,7 +56,7 @@
 <div class="row alum">
   <% if school.users_inactive != [] %>
     <% school.users_inactive.each do |student| %>
-      <div class="col-md-3 inactive-user">
+      <div class="col-lg-3 col-sm-4 inactive-user">
         <div class="panel panel-default">
           <div class="panel-heading">
             <p><%= student.name %>
