--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -32,7 +32,7 @@
   <%= f.password_field :password_confirmation %></div>
 
   <div class="form-group">
-    <label for="current_password">Current Password</label> <i>(we need your current password to confirm your changes)</i>
+    <label for="current_password">Current Password</label> <i>(we need your current password to confirm your changes)</i><br>
   <%= f.password_field :current_password %></div>
 
   <% if @schools %>
@@ -43,11 +43,7 @@
 <% end %>
 
 
-  <div><%= f.submit "Update" %></div>
+  <div><%= f.submit "Update", :class => "btn btn-primary btn" %></div>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
 <%= link_to "Back", :back %>
