--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -67,6 +67,7 @@
 	<% end %>
 
 	<!--  SEE YOUR PROGRESS *******************************************************      -->
+	<h3>You are <%= current_user.percent_complete %>% through your track.</h3>
 
 <svg id="completion"></svg>
 
